// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tip should render children 1`] = `
<Modeled(Connect(Field))
  model="model"
>
  <label
    className="property-label"
    htmlFor="testmodel"
  >
    <input
      id="testmodel"
      type="checkbox"
    />
     
    <Connect(Translate)
      translationKey="label"
    >
      label
    </Connect(Translate)>
  </label>
  children text!
</Modeled(Connect(Field))>
`;

exports[`Tip should render label and input for the model 1`] = `
<Modeled(Connect(Field))
  model="model"
>
  <label
    className="property-label"
    htmlFor="testmodel"
  >
    <input
      id="testmodel"
      type="checkbox"
    />
     
    <Connect(Translate)
      translationKey="label"
    >
      label
    </Connect(Translate)>
  </label>
</Modeled(Connect(Field))>
`;
